--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.4.4",
+    "vant": "^2.4.7",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "babel-plugin-import": "^1.13.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
